syntax = "proto3";
package QikkDB.NetworkClient.Message;

message QueryMessage {
    string Query = 1;
}